# stateful-pbt-with-fakes

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README-unprocessed.md  README.md  TODO.md  qsm-mini-lockstep.cabal  shell.nix  stateful-pbt-with-fakes.cabal
.github/workflows/: main.yaml
cbits/: queue.c  queue.h
src/: AtomicCounter.hs  BoxDrawer.hs  DieHard.hs  FileSystem.hs  MyLib.hs  Opaque.hs  Parallel.hs  Parallel2.hs  SleepyIORef.hs  StateModel.hs  Stateful.hs  Stateful2.hs  TicketDispenser.hs
src/Example/: Counter.hs  DieHard.hs  TicketDispenser.hs
src/Example/CRUD/: Real.hs  Test.hs
src/Example/FileSystem/: Fake.hs  Interface.hs  Real.hs  Test.hs
src/Example/KeyValueStore/: Real.hs  Test.hs
src/Example/Queue/: Fake.hs  Interface.hs  Real.hs  Test.hs
src/Example/Registry/: Real.hs  RealBuggy.hs  Test.hs
src/FileSystem/: Fake.hs  Interface.hs  Test.hs
src/Queue/: FFI.hs  Fake.hs  Real.hs  Test.hs  Test2.hs
src/Registry/: Real.hs  RealBuggy.hs  RegistryModel1.hs  Test.hs
test/: Main.hs
