cabal-version:   3.0
name:            stateful-pbt-with-fakes
version:         0.0.0

-- synopsis:
-- description:
license:         BSD-2-Clause
license-file:    LICENSE
author:          Stevan A
maintainer:      stevana@users.noreply.github.com

-- copyright:
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    FileSystem
    FileSystem.Fake
    FileSystem.Interface
    FileSystem.Test
    Parallel
    Queue.Fake
    Queue.Real
    Queue.Test
    StateModel
    TicketDispenser

  build-depends:
    , array
    , async
    , base        >=4.17.0.0
    , containers
    , directory
    , exceptions
    , filepath
    , QuickCheck
    , stm

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite stateful-pbt-with-fakes-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                     ^>=4.17.0.0
    , stateful-pbt-with-fakes
