cabal-version:      3.0
name:               stateful-pbt-with-fakes
version:            0.0.0

-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Stevan A
maintainer:         stevana@users.noreply.github.com

-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: cbits

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Example.DieHard
    Example.Queue.Fake
    Example.Queue.Real
    Example.Queue.Test
    Example.Registry.Real
    Example.Registry.RealBuggy
    Example.Registry.Test
    Example.TicketDispenser
    FileSystem
    FileSystem.Fake
    FileSystem.Interface
    FileSystem.Test
    Parallel
    Stateful
    StateModel

  build-depends:
    , array
    , async
    , base        >=4.17.0.0
    , containers
    , directory
    , exceptions
    , filepath
    , QuickCheck
    , stm

  hs-source-dirs:   src
  include-dirs:     cbits
  c-sources:        cbits/queue.c
  install-includes: cbits/queue.h
  default-language: Haskell2010

test-suite test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , stateful-pbt-with-fakes
    , tasty
    , tasty-quickcheck
