cabal-version:      3.0
name:               stateful-pbt-with-fakes
version:            0.0.0

-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Stevan A
maintainer:         stevana@users.noreply.github.com

-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: cbits

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    AtomicCounter
    Example.Counter
    Example.DieHard
    Example.FileSystem.Fake
    Example.FileSystem.Interface
    Example.FileSystem.Real
    Example.FileSystem.Test
    Example.Queue.Fake
    Example.Queue.Interface
    Example.Queue.Real
    Example.Queue.Test
    Example.Registry.Real
    Example.Registry.Test
    Example.TicketDispenser
    Parallel
    Parallel2
    SleepyIORef
    Stateful
    Stateful2

  build-depends:
    , array
    , async
    , base        >=4.17.0.0
    , containers
    , directory
    , exceptions
    , filepath
    , mtl
    , pretty
    , QuickCheck  ==2.15
    , stm

  hs-source-dirs:   src
  include-dirs:     cbits
  c-sources:        cbits/queue.c
  install-includes: cbits/queue.h
  default-language: Haskell2010

test-suite test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , stateful-pbt-with-fakes
    , tasty
    , tasty-quickcheck

  ghc-options:      -O2 -threaded -with-rtsopts=-N

-- -O0 -threaded -prof -fprof-auto "-with-rtsopts=-N -p -s -hT"
